--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <h2>WEB</h2>
   <p><a href="https://en.wikipedia.org/wiki/Web_(programming_system)" target="_blank" title="WEB Specification">The World Wide Web (abbreviated WWW or the Web)</a> is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989.
      He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
-  <p style="margin-top:45px;"><img src="Index.jpg" width="100%"></p>
+  <p style="margin-top:45px;"><img src=".jpg" width="100%"></p>
 </body>
 </html>
