--- a/2.html
+++ b/2.html
@@ -3,13 +3,16 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+
 </head>
 <body>
-  <h1><a href="index.html">WEB</h1>
+  <h1><a href="Index.html"><font color="red">WEB</font></a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    <!--만약 이 a태그가 1억개가 있다. 근데 아침 점심 저녁으로 매일같이 색을 변경해달라고 요청한다면?? 어떻게 해결할 것인가. 그래서 따로 <style>태그를 사용하여 묶는다.그러면 a{}라는 선택자로 묶을 수 있으니깐!-->
+
   </ol>
   <h2>CSS</h2>
   <p><a href="https://en.wikipedia.org/wiki/CSS" target="_blank" title="CSS Specification">Cascading Style Sheets (CSS)</a> is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript</p>
