--- a/2.html
+++ b/2.html
@@ -3,15 +3,33 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+<!-- <style>이라는 태그는 HTML의 문법이며, "웹브라우저야, 이 <style>태그 안쪽에 있는 내용은 CSS니,넌 이것을 CSS라는 언어의 문법에 맞게 해석해서 처리해야 돼!" -->
+  <style>
+    a{
+      color:Black;
+    }
+
+  </style>
+  <!--이전의 <font>태그는 1억개가 있다면 1억개를 다 변경해야하자만, css에서는 효과에 속성 값을 변경함으로써 한번에 다 수정 할 수 있다., 또한 중복을 제거 할 수 있다.css에서는 중복을 단 하나의 코드로 제거 할 수 있다. -->
+  <!--가독성과 수정, 유지 보수에 도움이 된다. 웹페이지를 디자인할 떄 HTML을 이용해서 디자인하는 것보다 훨씬 효과적.-->
+  <!-- 기존 코드와 달리 디자인과 관련된 코드와 정보와 관련된 코드가 따로 있기에, 웹페이지를 해석하는 기계들은 디자인과 관련된 것이0 필요없다면 정보부분만을 해석해 용이하다. 정보로서의 가치가 더 높아진다.-->
+  <!-- CSS도입 이유. HTML이 너무 중요하기에 HTML이 정보에 전념하게하기 위해 HTML로 부터 디자인 기능을 뺐어온게 CSS
+      CSS로 웹페이지를 디자인하는 것이 HTML로 하는 것보다 훨씬 더 효율적이기에, CSS 도입 -->
 
 </head>
 <body>
   <h1><a href="Index.html"><font color="red">WEB</font></a></h1>
   <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS<</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+
+  <!--<h1><a href="Index.html"><font color="red">WEB</font></a></h1>
+  <ol>
     <li><a href="1.html"><font color="red">HTML</font></a></li>
     <li><a href="2.html"><font color="red">CSS</font></a></li>
-    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
-    <!--만약 이 a태그가 1억개가 있다. 근데 아침 점심 저녁으로 매일같이 색을 변경해달라고 요청한다면?? 어떻게 해결할 것인가. 그래서 따로 <style>태그를 사용하여 묶는다.그러면 a{}라는 선택자로 묶을 수 있으니깐!-->
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>-->
+    <!--만약 이 a태그가 1억개가 있다. 근데 아침 점심 저녁으로 매일같이 색을 변경해달라고 요청한다면?? 어떻게 해결할 것인가.근본적인 해결 방법 css등장! 그래서 따로 <style>태그를 사용하여 묶는다.그러면 a{}라는 선택자로 묶을 수 있으니깐!-->
 
   </ol>
   <h2>CSS</h2>
