--- a/2.html
+++ b/2.html
@@ -1,28 +1,42 @@
 <!doctype html>
-<html>
+ <html>
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
-<!-- <style>태그는 속성 color:black만 있다면 누구에게 효과를 줄지 모르기에, a{} 이 코드가 추가적으로 더 필요. 웹페이지에 <a>태그들에게 적용한다는 의미.
- 이 웹페이지에서 주고 싶은 효과를 누구에게 줄 것인가를 선택한다는 점에서 '선택자' selector라 함. -->
- <!-- color:black; -> declaration은 아래 경우 처럼 style태그를 직접 사용한 경우 바로 저 style태그가 위치하고 있는 태그에게 효과를 줄 것이기 때문에 선택자를 사용할 필요가 없다.-->
-  <style>
+
+ <!--하나의 태그를 공통으로 제어할 수 있다. 아래 clss="saw active" / .active{}와 .saw{}로 제어함. 근데 저렇게 쓰면 순서로 인해 제어된 것이기에 우선순위인 id선택자를 사용하여 우선순위를 제어 -->
+<!-- .active -> #active로 우선순위를 높임. id선택자 > 클래스 선택자>태그선택자 , 동일한 선택자들이라면 마지막에 존재하는 것이 우선순위가 높음. -->
+<!-- 선택자를 통해 원하는 효과를 정교하게 어떠한 태그에 타겟팅 가능.-->
+<style>
     a{
       color:Black;
       text-decoration: none;
     }
 
+    #active{
+      color:red;
+    }
+    .saw{
+      color:gray;
+    }
+
+    h1{
+      font-size:45px;
+      text-align: center;
+    }
   </style>
+
 </head>
 <body>
   <h1><a href="Index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html" style="color:red; text-decoration:underline">CSS</a></li>
-    <!-- style의 속성은 그 값으로 반드시 css의 효과가 들어 올 수 있다. 위에 style=""이 부분은 html의 속성-->
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li> <!--class라는 속성의 값은 여러 개의 값이 들어 올 수 있고, 띄어쓰기로 구분한다. -->
+    <!--하나의 태그에는 여러 개의 속성이 들어 올 수 있고, 여러개의 선택자를 통해서 하나의 태그를 공동으로 제어할 수 있다.  -->
     <li><a href="3.html">JavaScript</a></li>
 
   </ol>
+
   <h2>CSS</h2>
   <p><a href="https://en.wikipedia.org/wiki/CSS" target="_blank" title="CSS Specification">Cascading Style Sheets (CSS)</a> is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript</p>
   <p style="margin-top:45px;"><img src="2.jpg" width="100%"></p>
